--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,8 @@
     "action": {
         "default_title": "SnitchBot",
         "default_popup": "interface/index.html"
-    }
+    },
+    "permissions": [
+        "tabs"
+    ]
 }
